--- a/ui/package.json
+++ b/ui/package.json
@@ -20,6 +20,8 @@
     "prop-types": "^15.8.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-router-dom": "^4.3.1",
+    "url-search-params": "^1.1.0",
     "whatwg-fetch": "^3.6.20"
   },
   "devDependencies": {
