--- a/api/sample.env
+++ b/api/sample.env
@@ -1,7 +1,7 @@
 
 ## DB
 # Local
-DB_URL=mongodb://lcoalhost/cop2836
+DB_URL=mongodb://localhost/cop2836
 
-## Server Port
+## Server port
 API_SERVER_PORT=3000
